Add Devices Mod to website,

--- a/index.html
+++ b/index.html
@@ -198,6 +198,34 @@
                     </div>
                     <div class="ProjectImage"></div>
                 </div>
+                <div id="Project_DevicesMod" class="ProjectItem"><!--suppress HtmlUnknownTarget -->
+                    <img src="data/img/project/devices-mod.png" width="386" sizes="200px" alt="Minecraft Sword of the Master Weapons Mod. Orangery red color." class="ProjectIcon"/>
+                    <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
+                        <div class="ProjectHead">A mod that adds working devices to Minecraft</div>
+                        <h2 class="ProjectName">Devices Mod</h2>
+                        <p class="ProjectDescription"><i>
+                                This mod adds a working laptop, with an custom operating system made for the mod.
+                                Featuring a bunch of apps including GitWeb. The mod is a fork of MrCrayfish's Device Mod.
+                                Me (<a href="https://github.com/Qboi123">@Qboi</a>) was challlenged to port this mod to 
+                                modern versions of Minecraft. Of course I accepted that challenge and ported it.
+                                I got (indirectly) permission of MrCrayfish as he said everyone was allowed to fork it and
+                                make their own version. So at some point <a href="https://github.com/Jab125">@Jab125</a> asked
+                                if he can help me. At some point we released it.
+                        </i></p>
+                        <a href="https://www.curseforge.com/minecraft/mc-mods/devices-mod" class="ProjectButton GenericButton">
+                            CurseForge Page
+                        </a>
+                        <a href="https://modrinth.com/mod/devices-mod" class="ProjectButton GenericButton">
+                            Modrinth Page
+                        </a>
+                        <a href="https://github.com/Ultreon/devices-mod" class="ProjectButton GenericButton Wide">
+                            GitHub Repository
+                        </a>
+                    </div>
+                    <div class="ProjectImage">
+    
+                    </div>
+                </div>
                 <div id="Project_MasterWeapons" class="ProjectItem"><!--suppress HtmlUnknownTarget -->
                     <img src="data/img/project/master-weapons.png" width="386" sizes="200px" alt="Minecraft Sword of the Master Weapons Mod. Orangery red color." class="ProjectIcon"/>
                     <div data-w-id="cafe0045-d304-79d9-8f68-af3adaed06e9" class="ProjectContent">
