--- a/metadata/changelog.html
+++ b/metadata/changelog.html
@@ -42,9 +42,12 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        background: #567;
+        background: transparent;
         -webkit-overflow-scrolling: touch;
         /* overflow: hidden; */
+      }
+      body {
+        background: transparent
       }
       p {
         width: 100%;
@@ -72,7 +75,7 @@
       }
       .badge.removed {
         color: white;
-        background: #f80;;
+        background: #fa0;;
         content: "REMOVED"
       }
       .badge.security-fix{
