--- a/metadata/changelog.html
+++ b/metadata/changelog.html
@@ -42,12 +42,9 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        background: transparent;
+        background: #567;
         -webkit-overflow-scrolling: touch;
         /* overflow: hidden; */
-      }
-      body {
-        background: transparent
       }
       p {
         width: 100%;
@@ -75,7 +72,7 @@
       }
       .badge.removed {
         color: white;
-        background: #fa0;;
+        background: #f80;
         content: "REMOVED"
       }
       .badge.security-fix{
