--- a/metadata/changelog.html
+++ b/metadata/changelog.html
@@ -167,7 +167,7 @@
       }
     </style>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <h1>Ultreon Games Changelog</h1>
     <p><i>Main news!!! 🗞️</i></p>
     <h2 class="log-item">
