--- a/metadata/changelog.html
+++ b/metadata/changelog.html
@@ -18,6 +18,7 @@
         background: white;
         padding: 24px 24px;
         margin: 32px;
+        user-select: none;
         box-shadow:
           0px 1.4px 5.5px rgba(0, 0, 0, 0.056),
           0px 3.3px 13.3px rgba(0, 0, 0, 0.081),
