Updated Ultracraft section

--- a/index.html
+++ b/index.html
@@ -156,16 +156,13 @@
                         </h2>
                         <p class="ProjectDescription">
                             <em class="ItalicText">
-                                This project is still work-in-progress. The game is made in Java using LibGDX and will get support for Fabric mods.
-                                Currently still in development, there's no ETA for when it releases it yet.
+                                This project is still work-in-progress. The game is made in Java using LibGDX and has support for Fabric mods.
+                                Currently still in development, there's no ETA for when it releases yet.
                             </em>
                         </p>
                         <div class="ProjectButtons WContainer">
-                            <a target="_blank" class="ProjectButton GenericButton Disabled SelectOverride">
-                                Not Released Yet
-                            </a>
-                            <a href="https://github.com/Ultreon/ultreon-craft" target="_blank" class="ProjectButton GenericButton Beta">
-                                Source Code
+                            <a href="https://ultreon.github.io/ultracraft" target="_blank" class="ProjectButton GenericButton Wide Beta">
+                                Homepage
                             </a>
                         </div>
                         <div class="ProjectSeparator"></div>
