--- a/public/data/project/mine-chromatic.html
+++ b/public/data/project/mine-chromatic.html
@@ -26,7 +26,7 @@
   <li>
     Adds a webbrowser app to
     <a
-      href="/linkout?remoteUrl=https%253a%252f%252fmodrinth.com%252fmod%252fdevices-mod"
+      href="?id=devices-mod#project"
       rel="nofollow"
       >Ultreon Devices Mod</a
     >
@@ -42,13 +42,13 @@
   <li>
     Requires
     <a
-      href="/linkout?remoteUrl=https%253a%252f%252fmodrinth.com%252fmod%252fdevices-mod"
+      href="?id=devices-mod#project"
       rel="nofollow"
       >Ultreon Devices Mod</a
     >
     and
     <a
-      href="/linkout?remoteUrl=https%253a%252f%252fmodrinth.com%252fmod%252fmcef"
+      href="https://modrinth.com/mod/mcef"
       rel="nofollow"
       >MCEF</a
     >
