--- a/app-center.html
+++ b/app-center.html
@@ -79,7 +79,7 @@
     <body>
         <div id="root" style="font-variation-settings: 'FILL' 1, 'wght' 700, 'GRAD' 0, 'opsz' 48;">
             <h1>Ultreon AppCenter</h1>
-            <p>This is the app center, the place where you can find all the apps and games made by Ultreon.</p>
+            <p>Ultreon app center, the place where you can find all the apps and games made by Ultreon.</p>
             
             <h2>Downloads:</h2>
             <div>
