--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Games, software and more made by Ultreon Team!"
+      content="Games, software and more made by Ultreon Studios!"
     />
     <script>
       if (!window.location.pathname.endsWith("/")) {
@@ -20,7 +20,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <title>Ultreon Team</title>
+    <title>Ultreon Studios</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to open this site.</noscript>
