--- a/data/project/random-thingz.html
+++ b/data/project/random-thingz.html
@@ -58,9 +58,9 @@
 <hr />
 <p style="text-align: center;"><span style="font-size: 24px;"><strong><b>Links</b></strong></span></p>
 <p style="text-align: center;"><a href="https://ultreon.github.io/web/" target="_blank"
-        rel="noopener noreferrer">Ultreon Team website</a></p>
-<p style="text-align: center;"><a title="Ultreon Team - GitHub" href="https://github.com/Ultreon" target="_blank"
-        rel="noopener noreferrer">Ultreon Team on GitHub</a></p>
+        rel="noopener noreferrer">Ultreon Studios website</a></p>
+<p style="text-align: center;"><a title="Ultreon Studios - GitHub" href="https://github.com/Ultreon" target="_blank"
+        rel="noopener noreferrer">Ultreon Studios on GitHub</a></p>
 <p style="text-align: center;"><a title="XyperCode - YouTube"
         href="https://www.youtube.com/channel/UC6zGmXLKHUY5rAObdGLvvMA" target="_blank" rel="noopener noreferrer"><img
             src="https://img.shields.io/badge/XyperCode-FF0000?style=for-the-badge&amp;logo=youtube&amp;logoColor=white"
@@ -68,10 +68,10 @@
         rel="noopener noreferrer"><img
             src="https://img.shields.io/badge/XyperCode-000000?style=for-the-badge&amp;logo=github&amp;logoColor=white"
             alt="" width="104" height="28" /></a></p>
-<p style="text-align: center;">&nbsp;<a title="Ultreon Team - YouTube"
+<p style="text-align: center;">&nbsp;<a title="Ultreon Studios - YouTube"
         href="https://www.youtube.com/channel/UC35VI5RDb1hdsXWtqJIu3mw" target="_blank" rel="noopener noreferrer"><img
             src="https://img.shields.io/badge/Ultreon%20Team-FF0000?style=for-the-badge&amp;logo=youtube&amp;logoColor=white"
-            alt="Youtube Ultreon Team" width="146" height="28" /></a><a href="https://github.com/Ultreon"
+            alt="Youtube Ultreon Studios" width="146" height="28" /></a><a href="https://github.com/Ultreon"
         target="_blank" rel="noopener noreferrer"><img
             src="https://img.shields.io/badge/Ultreon%20Team-000000?style=for-the-badge&amp;logo=github&amp;logoColor=white"
             width="146" height="28" /></a></p>
